--- a/public/500.html
+++ b/public/500.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>We're sorry...</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body { background-color: #fff; color: #000; text-align: center; font-family: arial, sans-serif; }
+    a {
+      text-decoration: none;
+      color: #000;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
     div.dialog {
       width: 25em;
       padding: 0 4em;
@@ -18,8 +26,9 @@
 
 <body>
   <!-- This file lives in public/500.html -->
+  <h2>Connectify.de</h2>
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>We're sorry, but something went not the way it should :( Please try to reload or this <a href="http://connectify.de/signout">LINK</a> and help us to improve by writing an <a href="mailto: daniel.fliegauf@gmail.com">eMail</a>! Thank you!</h1>
   </div>
 </body>
 </html>
