fixed group bug when token not validated

--- a/public/500.html
+++ b/public/500.html
@@ -28,7 +28,7 @@
   <!-- This file lives in public/500.html -->
   <h2>Connectify.de</h2>
   <div class="dialog">
-    <h1>We're sorry, but something went not the way it should :( Please try to reload or this <a href="http://connectify.de/signout">LINK</a> and help us to improve by writing an <a href="mailto: daniel.fliegauf@gmail.com">eMail</a>! Thank you!</h1>
+    <h1>We're sorry, but something went not the way it should :( Please try to go back or this <a href="http://connectify.de/">LINK</a> and help us to improve by writing an <a href="mailto: daniel.fliegauf@gmail.com">eMail</a>! Thank you!</h1>
   </div>
 </body>
 </html>
