--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>We're sorry...</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body { background-color: #fff; color: #000; text-align: center; font-family: arial, sans-serif; }
+    a {
+      text-decoration: none;
+      color: #000;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
     div.dialog {
       width: 25em;
       padding: 0 4em;
@@ -17,10 +25,15 @@
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
+  <!-- This file lives in public/500.html -->
+  <h2>Connectify.de : 404</h2>
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>We're sorry, but something went not the way it should (Beta) :( Please try this <a href="http://connectify.herokuapp.com/signout">LINK</a>. Thank you!</h1>
+  </div>
+  <br>
+  <br>
+  <div class="dialog">
+    <h1>Tut uns leid. Irgendetwas klappt nicht so wie es soll... (BETA-Phase) :( Versuche bitte folgenden <a href="http://connectify.herokuapp.com/signout">LINK</a>. Danke!</h1>
   </div>
 </body>
 </html>
