--- a/public/500.html
+++ b/public/500.html
@@ -26,9 +26,14 @@
 
 <body>
   <!-- This file lives in public/500.html -->
-  <h2>Connectify.de</h2>
+  <h2>Connectify.de: 500</h2>
   <div class="dialog">
-    <h1>We're sorry, but something went not the way it should :( Please try to go back or this <a href="http://connectify.de/">LINK</a> and help us to improve by writing an <a href="mailto: daniel.fliegauf@gmail.com">eMail</a>! Thank you!</h1>
+    <h1>We're sorry, but something went not the way it should (Beta) :( Please try this <a href="http://connectify.herokuapp.com/signout">LINK</a>. Thank you!</h1>
+  </div>
+  <br>
+  <br>
+  <div class="dialog">
+    <h1>Tut uns leid. Irgendetwas klappt nicht so wie es soll... (BETA-Phase) :( Versuche bitte folgenden <a href="http://connectify.herokuapp.com/signout">LINK</a>. Danke!</h1>
   </div>
 </body>
 </html>
