--- a/public/500.html
+++ b/public/500.html
@@ -36,7 +36,7 @@
 
 <body style="">
   <!-- This file lives in public/500.html -->
-  <h2>Connectify.de: 500</h2>
+  <img src="/assets/connectify9.png" height="50px;"/>
   <img src="/assets/cat.jpg" class="cat" />
   <div class="dialog lead">
     <h1>Tut uns leid. :(<br>Irgendetwas klappt nicht so wie es soll... <br>(Wir sind noch in der BETA-Phase) <br>
