--- a/public/404.html
+++ b/public/404.html
@@ -3,37 +3,80 @@
 <head>
   <title>We're sorry...</title>
   <style type="text/css">
-    body { background-color: #fff; color: #000; text-align: center; font-family: arial, sans-serif; }
+    body { color: #000;  font-family: arial, sans-serif; }
     a {
       text-decoration: none;
-      color: #000;
+      color: #f00;
     }
 
     a:hover {
       text-decoration: underline;
     }
     div.dialog {
-      width: 25em;
+      background-color: rgba(255, 255, 255, 0.89);
+      text-align: center;
+      width: 28em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
+      border: 6px solid #ccc;
       border-right-color: #999;
       border-bottom-color: #999;
+      box-shadow: 2px 2px 14px;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    h1 { font-size: 100%; color: #000; line-height: 1.5em; }
+
+    .cat {
+      border: 1px solid black;
+      box-shadow: 2px 2px 13px;
+      padding: 10px 10px 50px 10px;
+    }
+    .conlogo {
+      border: 2px solid black;
+      padding: 1px;
+      box-shadow: 4px 4px gray;
+    }
+    #bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+    z-index: -100;
+}
+#bg img {
+  z-index: -100;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+}
+    p {
+      font-size: 0.6em;
+    }
   </style>
 </head>
 
 <body>
+  <div id="bg">
+  <img src="/assets/shut_climbing.jpg"/>
+</div>
   <!-- This file lives in public/500.html -->
-  <h2>Connectify.de : 404</h2>
-  <div class="dialog">
-    <h1>We're sorry, but something went not the way it should (Beta) :( Please try this <a href="http://connectify.herokuapp.com/signout">LINK</a>. Thank you!</h1>
+  <div style="text-align: center;"><img src="/assets/connectify9.png" height="50px;" class="conlogo"/></div>
+  
+ <div class="dialog lead">
+    <h1>Die angeforderte Seite existiert nicht auf unserem Server. <br>
+      Versuche bitte folgenden <a href="http://connectify.herokuapp.com/signout">LINK</a>. Danke!</h1>
+      <p>Connectify wurde &uumlber den Fehler informiert und versucht diesen so schnell wie m&oumlglich zu beheben. Danke f&uumlr deine Mithilfe!</p>
   </div>
-  <br>
-  <br>
+  <br><br>
   <div class="dialog">
-    <h1>Tut uns leid. Irgendetwas klappt nicht so wie es soll... (BETA-Phase) :( Versuche bitte folgenden <a href="http://connectify.herokuapp.com/signout">LINK</a>. Danke!</h1>
+    <h1>We're sorry, The site is not existing on our server. <br>Please try this <a href="http://connectify.herokuapp.com/signout">LINK</a>. Thank you!</h1>
+    <p>Connectify was informed about the error and will try to fix it as soon as possible. Thank you for helping to make Connectify better!</p>
   </div>
+
 </body>
 </html>
