--- a/public/404.html
+++ b/public/404.html
@@ -31,8 +31,7 @@
       padding: 10px 10px 50px 10px;
     }
     .conlogo {
-      border: 2px solid black;
-      padding: 1px;
+      border: 4px solid rgba(100, 88, 88, 0.56);
       box-shadow: 4px 4px gray;
     }
     #bg {
